--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,9 +5,51 @@ body {
     background-color: #e4ebf5;
     font-family: "VT323";
 }   
+.form {
+  
+    margin: 3rem;
+ 
+}
+.alert  {
+    height: 11.5rem;
+    text-align: center;
+    border: 2px solid beige;
+    width: 22.5rem;
+    min-width: 10rem;
+    
+    
+    
+}
 
-.mainCard {
-    border: 2px solid red;
+.card {
+    margin-top: 100rem;
+}
+
+.centered {
+
+}
+.flexbox {
+    display: flex;
+    justify-content: center;
+}
+.mb-0 {
+    margin: 10px;
+}
+
+.logoText {
+    margin-top: 30px;
+    margin-left: 71rem;
+    position: absolute;
+}
+.formInput {
+    margin: 10px;
+    margin-top: 0px;
+}
+
+
+.submitButton {
+    margin: 1rem;
+    margin-bottom: 3rem;
 }
 
 .terminal-connected {
@@ -32,11 +74,7 @@ body {
 
 
 
-.blue {
-    color: rgb(3, 161, 189);
-    margin: 5px;    
-    width: 30px;
-}
+
 
 .centered { 
     text-align: center;
@@ -77,7 +115,5 @@ body {
     position: absolute;
 }
 
-.border {
-    border: 2px solid blue;
-}
+
 
