--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,7 +6,8 @@ body {
     font-family: "VT323";
 }   
 .form {
-  
+    display: block;
+    justify-content: center;
     margin: 3rem;
  
 }
@@ -22,12 +23,10 @@ body {
 }
 
 .card {
+    border: 2px solid red;
     margin-top: 100rem;
 }
 
-.centered {
-
-}
 .flexbox {
     display: flex;
     justify-content: center;
@@ -36,20 +35,62 @@ body {
     margin: 10px;
 }
 
+.computer {
+    
+    height: 10rem;
+    margin-top: 25rem;
+    margin-right: 800px;
+    opacity: 0.9;
+}
+
+.computer:hover {
+    
+    cursor: pointer;
+    -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.right {
+    display: flex;
+    justify-content: right;
+}
+
 .logoText {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    font-size: 15px;
+   
     margin-top: 30px;
-    margin-left: 71rem;
+    margin-left: 85.5rem;
+    margin-bottom: 10px;
     position: absolute;
 }
+
+.logoText:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 .formInput {
     margin: 10px;
     margin-top: 0px;
 }
 
+.weth {
+    min-height: 100%;
+}
 
-.submitButton {
+.submitButton {   
+    margin-top: 10px;
     margin: 1rem;
     margin-bottom: 3rem;
+}
+
+.submitButton:hover {   
+    font-size: 50px;
+    -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .terminal-connected {
@@ -89,6 +130,13 @@ body {
     position: absolute; right:0; top:0;
     margin: 1rem;
 
+}
+
+
+label {
+    color: gray;
+    margin: 10px;
+    padding: -10px;
 }
 
 .qrButton {
