--- a/src/components/App.css
+++ b/src/components/App.css
@@ -177,6 +177,7 @@ label {
   } */
   
   .toggle {
+    position: absolute;
     transition: 0.2s;
   } 
   
@@ -186,13 +187,14 @@ label {
 
   .dark-mode {
     color: rgb(255, 255, 255);
-    background-color: #131318;
+    background-color: #222221;
   
   }
 
   .dark-mode .ui-card {
-      background-color: #181820;
+      background-color: #222221;
       color: white;
+      box-shadow: 1px 1px 8px 8px rgb(46, 46, 46);
   }
 
   .dark-mode .flexbox {
@@ -200,5 +202,8 @@ label {
     background-color: #181820;
   }
 
+  /* .dark-mode .navFab {
+    box-shadow: 8px 8px 8px 8px rgb(17, 17, 17);
+  } */
 
 
